discussion/kv_engine/177062/177062_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Turn FCManager::consumersMap into a folly::Sync set

Two changes here:
1. From mutex to folly::Synchronized, for easier thread safety
2. From map<Cookie, DcpConsumer*> to set<DcpConsumer*>

(2) is all what we need for modifying/accessing the structure as all
the related FCManager API takes DcpConsumer* in input.

Change-Id: Ie7d307de48dfd6685b5515f7321a714de1aae30c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-04 13:58:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 19:12:54.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47414/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
..\kv_engine\engines\ep\tests\module_tests\evp_engine_test.cc(313): error: Failed
Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (72 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47414/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18640/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18640/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18640/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39842/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28912/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
[2022-07-04T17:41:20.435Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T17:41:20.435Z] Failed
[2022-07-04T17:41:20.435Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T17:41:20.435Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (190 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20526/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore
[2022-07-04T17:27:15.860Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T17:27:15.860Z] Failed
[2022-07-04T17:27:15.860Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T17:27:15.860Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore, where GetParam() = "persistent_couchstore" (27 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20878/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
[2022-07-04T17:28:11.674Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T17:28:11.674Z] Failed
[2022-07-04T17:28:11.674Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T17:28:11.674Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (135 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20878/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21527/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
[2022-07-04T17:33:17.109Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T17:33:17.109Z] Failed
[2022-07-04T17:33:17.109Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T17:33:17.109Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (324 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21527/ )

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x7719f) in AnnotateRWLockAcquired  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8413/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
[2022-07-04T15:19:06.636Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T15:19:06.636Z] Failed
[2022-07-04T15:19:06.636Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T15:19:06.636Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (125 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19755/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
[2022-07-04T19:02:02.540Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:313: Failure
[2022-07-04T19:02:02.540Z] Failed
[2022-07-04T19:02:02.540Z] Dynamic config key "dcp_flow_control_enabled" cannot be set via any of the set...Param methods.
[2022-07-04T19:02:02.540Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma, where GetParam() = "persistent_magma" (87 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19755/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17795/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8315/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
